@@ -56,6 +56,10 @@ from the document.")
   `((mmdf
      (article-begin .  "^\^A\^A\^A\^A\n")
      (body-end .  "^\^A\^A\^A\^A\n"))
+    (debbugs-db
+     (file-begin    . "^\005")
+     (article-begin . "^[\005\007]\n")
+     (body-end      . "^\003"))
     (mime-digest
      (article-begin . "")
      (head-begin . "^ ?\n")
@@ -458,6 +462,10 @@ from the document.")
 
 (defun nndoc-mmdf-type-p ()
   (when (looking-at "\^A\^A\^A\^A$")
+    t))
+
+(defun nndoc-debbugs-db-type-p ()
+  (when (looking-at "\006$")
     t))
 
 (defun nndoc-news-type-p ()
